# notebook_whisperer

./: Example.ipynb  LICENSE  README.md  pyproject.toml  setup.py
notebook_whisperer/: __init__.py  notebook_whisperer.py
