[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notebook_whisperer"
version = "0.0.1"
authors = [
  { name="Matthew Clegg", email="matthewcleggphd@gmail.com" },
]
description = "An LLM-based coding assistant to help with the construction of Jupyter and Colab notebooks"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/matthewclegg/notebook_whisperer"
"Bug Tracker" = "https://github.com/matthewclegg/notebook_whisperer/issues"
